--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html xml:lang="es">
   <head>
-    <title>Sumador</title>
+    <title>Totalizador de Ventas</title>
   </head>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
-    </form>
-    <div id="resultado-div"></div>
-
+    <h1>Totalizador de ventas</h1>
+    <div>Cantidad de items</div>
+    <input type="number" id="cant-item" />
+    <input type="submit" value="Mostrar" id="totalizador-button" />
+    <div id="mostrar"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
