--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <title>Totalizador de Ventas</title>
   </head>
   <body>
-    <h1>Totalizador de ventas</h1>
-    <div>Cantidad de items</div>
-    <input type="number" id="cant-item" />
-    <input type="submit" value="Mostrar" id="totalizador-button" />
+    <h1>Totalizador de Ventas</h1>
+    <form id="totalizador_form">
+      <label>Cantidad de items: </label>
+      <input type="number" id="cant_item" />
+      <h1></h1>
+      <label>Precio por item: </label>
+      <input type="number" id="precio_item" />
+      <input type="submit" value="Mostrar" id="totalizador-button" />
+    </form>
+    
+    
+
     <div id="mostrar"></div>
+
     <script type="module" src="./src/presenter.js"></script>
+
+
+
+
   </body>
 </html>
