--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1></h1>
       <label>Precio por item: </label>
       <input type="number" id="precio_item" />
-      <input type="submit" value="Mostrar" id="totalizador-button" />
+      <input type="submit" value="Totalizar" id="totalizador-button" />
     </form>
     
     
