--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
       <label>Precio por item: </label>
       <input type="number" id="precio_item" />
       <input type="submit" value="Totalizar" id="totalizador-button" />
+      <h1></h1>
+      <label for="cod_estados">Codigo de estado:</label>
+      <select id="cod_estados" name="cod_estados">
+        <option value="estado1">UT</option>
+        <option value="estado2">NV</option>
+        <option value="estado3">TX</option>
+        <option value="estado4">AL</option>
+        <option value="estado5">CA</option>
+      </select>
     </form>
-    
-    
 
     <div id="mostrar"></div>
 
