feat: Muestra la lista de categorias de productos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
         <option value="estado3">TX</option>
         <option value="estado4">AL</option>
       </select>
-      
+      <h1></h1>
+      <label for="categorias_productos">Categoria de producto:</label>
+      <select id="categorias_productos" name="categoria_producto">
+        <option value="categoria1">Alimentos</option>
+        <option value="categoria2">Bebidas alcohólicas</option>
+        <option value="categoria3">Material de escritorio</option>
+        <option value="categoria4">Muebles</option>
+        <option value="categoria5">Electrónicos</option>
+        <option value="categoria6">Vestimenta</option>
+        <option value="categoria7">Varios</option>
+      </select>
       <input type="submit" value="Totalizar" id="totalizador-button" />
     </form>
 
