feat: Muestra la categoria de producto seleccionada

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </select>
       <h1></h1>
       <label for="categorias_productos">Categoria de producto:</label>
-      <select id="categorias_productos" name="categoria_producto">
+      <select id="categorias_productos" name="categorias_productos">
         <option value="categoria1">Alimentos</option>
         <option value="categoria2">Bebidas alcohólicas</option>
         <option value="categoria3">Material de escritorio</option>
