--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <input type="submit" value="Totalizar" id="totalizador-button" />
     </form>
 
+    <h1></h1>
+    <label>Peso volumétrico: </label>
+    <input type="number" id="peso_volumetrico" />
+
     <div id="mostrar"></div>
 
     <script type="module" src="./src/presenter.js"></script>
