Feat: Seleccionar de una lista desplegable el tipo de Cliente  y mostrar en pantalla lo seleccionado

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
       <h1></h1>
       <label>Peso volumétrico: </label>
       <input type="number" id="peso_volumetrico" />
-
+      <h1></h1>
+      <label for="tipo_cliente">Tipo de Cliente:</label>
+      <select id="tipo_cliente" name="tipo_cliente">
+        <option value="cliente2">Recurrente</option>
+        <option value="cliente1">Normal</option>
+        
+        <option value="cliente3">Antiguo Recurrente</option>
+        <option value="cliente4">Especial</option>
+      </select>
     </form>
 
     <div id="mostrar"></div>
